# ai-voiceagent

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  README.md  claude.toml  next.config.js  package.json  pnpm-lock.yaml  prompt.md  ship.sh  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: settings.local.json
.github/scripts/: blog_gen.py
.github/workflows/: build.yml  release.yaml
.memory/: letter_01.md  letter_02.md  letter_03.md  letter_04.md  letter_05.md  letter_06.md  letter_07.md  letter_20260204_0001.md  letter_20260205_0001.md  letter_20260205_0002.md  letter_20260205_0003.md  letter_20260205_0004.md  letter_20260205_0005.md  letter_20260205_0006.md  letter_20260206_0001.md  letter_20260206_0002.md  letter_20260206_0003.md  letter_20260206_0004.md  letter_20260206_0005.md  letter_20260206_0006.md  letter_20260206_0007.md  letter_20260206_0008.md  letter_20260206_0009.md
__tests__/: agents.test.ts  components.test.tsx  platform.test.tsx  setup.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: AgentResults.tsx  AgentSelector.tsx  ResizeHandle.tsx  SyncPairing.tsx  SyncStatus.tsx  ToneSelector.tsx  TranscriptDisplay.tsx  TranslationPanel.tsx  VoiceInput.tsx  WindowControls.tsx  index.ts
app/hooks/: index.ts  useDeepgramStreaming.ts  useGlobalShortcut.ts  useLocalAI.ts  usePlatform.ts  useSync.ts  useTauriEvents.ts  useWebAudioCapture.ts
app/settings/: page.tsx
app/store/: voiceStore.ts
app/workers/: ai-worker.ts
docs/: ARCHITECTURE.md  CONTRIB.md  IDEAS.md  MOBILE_SETUP.md  RUNBOOK.md  TODO.md
drafts/: blog_2026-02-04_letter_20260204_0001.md  blog_2026-02-05_letter_20260205_0002.md  blog_2026-02-05_letter_20260205_0003.md  blog_2026-02-05_letter_20260205_0005.md  blog_2026-02-06_letter_20260205_0006.md  blog_2026-02-06_letter_20260206_0001.md  blog_2026-02-06_letter_20260206_0002.md  blog_2026-02-07_letter_20260206_0009.md
e2e/: voice-flow.spec.ts
signaling-server/: Cargo.toml
signaling-server/src/: main.rs
signaling-server/tests/: e2e.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  secrets.rs  transcription.rs  tts.rs
src-tauri/src/agents/: action_items.rs  brain_dump.rs  dev_log.rs  mental_mirror.rs  mod.rs  music_matcher.rs  tone_shifter.rs  translator.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/audio/: desktop.rs  mobile.rs  mod.rs
src-tauri/src/platform/secrets/: android.rs  apple.rs  linux.rs  mod.rs  windows.rs
src-tauri/src/sync/: discovery.rs  document.rs  encryption.rs  mod.rs  pairing.rs  signaling.rs  transport.rs  webrtc.rs
