[package]
name = "aurus-signaling-server"
version = "0.1.0"
edition = "2021"
description = "Opaque WebSocket relay for Aurus cross-network sync signaling"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
