[package]
name = "aurus-voice-intelligence"
version = "1.0.0"
description = "Voice Intelligence Hub - Desktop Voice Assistant"
authors = ["Voice Intelligence Hub"]
edition = "2021"

[lib]
name = "voice_intelligence_hub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri (macos-private-api is ignored on non-macOS platforms)
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# WebSocket
async-tungstenite = { version = "0.26", features = ["tokio-runtime", "tokio-rustls-native-certs"] }

# Audio file writing
hound = "3.5"

# CRDT (ephemeral in-memory sync)
yrs = "0.21"

# Crypto (E2E encryption for sync)
ring = "0.17"
rand = "0.8"

# Pairing (SPAKE2 password-authenticated key exchange)
spake2 = "0.4"

# Local network discovery
mdns-sd = "0.17"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Base64 encoding for signaling wire format
base64 = "0.22"

# Utilities
dirs = "5"
once_cell = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Desktop-only: Audio capture, local Whisper, global shortcut, WebRTC
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
cpal = "0.15"
whisper-rs = "0.14"
tauri-plugin-global-shortcut = "2"
datachannel = { version = "0.16", features = ["vendored"] }
webrtc-sdp = "0.3"

# macOS/iOS: Security.framework for Keychain
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = "2.11"

# Windows: Credential Manager
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
] }

# Linux: Secret Service (libsecret)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }

# Android: JNI for Keystore access
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
